--- a/views/signIn.jade
+++ b/views/signIn.jade
@@ -3,14 +3,19 @@
 </script>
 extends layout
 append body
-	.container.pageController(ng-controller="signInController" style="margin:0 auto;width:90%;max-width:966px;")
-		#signInWrapper.formInputWrapper
+	.bgImage
+	.pageController(ng-controller="signInController" style="margin:0 auto;width:90%;max-width:966px;")
+		.aleartTop
+			+alert-i-warning("Signing up with Music Production Helper allows you to view your profile page.  With a profile on mphelper.io you can: contribute to the Tip Library, save tips, comment on tips, network yourself with other producers, link your SoundCloud, and gain a good rep for helping others!")
+		
+		#signInWrapper.formInputWrapper()
 			.titleBannerDiv()
-				h3
-					#titleName= title				
+				.labelDisplayStrong.signInLabel
+					#titleName= title	
+				
 				//div.alert#note #{messages}
 				#redirect(ng-hide='true' ng-model='redirect')= redirect
-
+			
 			//#soundCloudWrapper(ng-click='signInWithSoundCloud()')
 			//	img(src='http://connect.soundcloud.com/2/btn-connect-sc-s.png')
 			form#signInDetails()
