--- a/views/about.jade
+++ b/views/about.jade
@@ -1,7 +1,8 @@
 extends layout
 
 append body
-	.pageController.container.row(style="text:center;margin:0 auto;")
+	.bgImage
+	.pageController.container.row(style="text:center;margin:0 auto;margin-top:50px")
 		.titleBannerDiv()
 			h1
 				#titleName= title
