--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -1,6 +1,7 @@
 extends layout
 
 append body
+	//.bgImage
 	.pageController(ng-controller="bodyTipHelperController" style = '' id='controllerDiv' )
 		.div.userDetailsDivTipLib
 			.div.username
