--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,12 @@ p {
     border-radius: 5px;
     z-index: 1;
 }
+.activeHeart{
+    color:red;
+}
+.activeDownloaded{
+    color:green;
+}
 .bgImage{
      /* The image used */
     /* Full height */
@@ -565,6 +571,9 @@ a {
 #descBody{
     white-space: pre-wrap;
 }
+.descBody{
+    margin-bottom: 3px;
+}
 .row{
     margin-left:0px;
     margin-right:0px;
@@ -763,14 +772,23 @@ li{
     border-width: thin;
     border-color: #4a8b2e;
 }
+.tipSampleRowWrapper{
+
+    margin-bottom:5px;
+    margin-top:5px;
+}
 .sampleRowWrapper{
     border-bottom-style: solid;
     border-bottom-width: thin;
     margin-bottom:3px;
     border-bottom-color: #cccccc;
+    margin-top:3px;
 }
 .hover:hover{
     cursor:pointer;
+}
+#tipSampleNameAndTags{
+    margin-bottom: -20px;
 }
 .inputGroup{
     margin-bottom: 5px;
