--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -181,7 +181,7 @@ a {
     margin-left:5px;
 }
 .arrowBtnClass{
-    float:right;
+  //  float:right;
 }
 .packHeaderWrapper{
     font-size:18px;
@@ -489,6 +489,9 @@ a {
     color: white;
     opacity: .8;
 }
+.isActiveLoved{
+    background-color:red;
+}
 .activePackNameWrapper{
     background:#616161;
     border-radius: 5px;
@@ -543,8 +546,8 @@ a {
 }
 #loveButton.active, #loveButton.focus, #loveButton:active, #loveButton:focus{
     color: #fff;
-    background-color: darkslateblue;
-    border-color: #204d74;
+    background-color: #e24c4c;
+    border-color: b3b3b3;
     border-style: solid;
     border-width: thin;
     cursor: pointer;
