--- a/views/sampleLib.jade
+++ b/views/sampleLib.jade
@@ -8,11 +8,13 @@ append body
 				a(href='/profile/{{username}}'){{username}}!
 		
 		div.row(style='margin-top:50px')
+
 			div.packListWrapper.col-sm-3.col-md-3.col-lg-3.col-xs-3
 				
 
 				packs-list#packList
 			div#packAndSampleWidget.col-xs-6.col-sm-6.col-lg-7.col-md-6
+				+alert-info("The Sample Library is still under development.  This is a place where you can find and download samples that may be referenced within a tutorial from the Tip Library")
 
 				div.filtersWrapper.row
 					.row.filterBoxStyle#stickyheaderPackFilters(ng-style="filtersBoxStyle" ng-show='true')
