--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -451,7 +451,8 @@ a {
 
 .navBarTipActive{
     background-color: white;
-    border-top-style: solid;
+ border-style: solid;
+    border-color: #adf196;
 }
 .rightBarNavItem{
     max-height: 40px;
@@ -477,6 +478,7 @@ a {
     border-bottom-style: solid;
     border-bottom-width:  thin;
     border-bottom-color: #d4d4d4;
+        border-radius: 5px;
     transition: max-height 0.5s ease-out;
 
 }
