--- a/views/tipLib.jade
+++ b/views/tipLib.jade
@@ -25,7 +25,7 @@ append body
 		.row
 			#stickyaliasNavLeft
 			#stickyheaderNavLeft.col-xs-0.col-sm-3.col-md-3.col-lg-3
-				#navBarWrapper()
+				#navBarWrapper.mh-100()
 					//#blockForMargin(style="height:11px;width:100%")
 					#sortNavBarWrapper(style="display:inline-block;width:100%;margin-bottom:5px;")
 						#labelSort
