--- a/views/signIn.jade
+++ b/views/signIn.jade
@@ -7,27 +7,28 @@ append body
 	.pageController(ng-controller="signInController" style="margin:0 auto;width:90%;max-width:966px;")
 		.aleartTop
 			+alert-i-warning("Signing up with Music Production Helper allows you to view your profile page.  With a profile on mphelper.io you can: contribute to the Tip Library, save tips, comment on tips, network yourself with other producers, link your SoundCloud, and gain a good rep for helping others!")
-		
-		#signInWrapper.formInputWrapper()
-			.titleBannerDiv()
-				.labelDisplayStrong.signInLabel
-					#titleName= title	
-				
-				//div.alert#note #{messages}
-				#redirect(ng-hide='true' ng-model='redirect')= redirect
-			
-			//#soundCloudWrapper(ng-click='signInWithSoundCloud()')
-			//	img(src='http://connect.soundcloud.com/2/btn-connect-sc-s.png')
-			form#signInDetails()
-				+label-info("Username:")
-				br
-				input#signInInput.form-control(name="username" ng-model='signInUsername')
-				+label-info("Password:")
-				br
-				input#passWordInput.form-control(type="password" name="password" ng-model='signInPassword')
-				#btnSignInSubmit.keyButton
-					button.btn.btn-primary(type="submit" ng-click='signInClicked()')
-						span Sign In
-				#signInLinkWrapper
-					a#signInLink(href="/signUp")
-						span Not a member? Sign Up
+		#pagerow.row
+			.signUpLeftMargin.col-lg-3.col-md-3.col-sm-3.col-xs-0
+			#signInWrapper.formInputWrapper().col-lg-6.col-md-6.col-sm-6.col-xs-0
+				.titleBannerDiv()
+					.labelDisplayStrong.signInLabel
+						#titleName= title	
+
+					//div.alert#note #{messages}
+					#redirect(ng-hide='true' ng-model='redirect')= redirect
+
+				//#soundCloudWrapper(ng-click='signInWithSoundCloud()')
+				//	img(src='http://connect.soundcloud.com/2/btn-connect-sc-s.png')
+				form#signInDetails()
+					+label-info("Username:")
+					br
+					input#signInInput.form-control(name="username" ng-model='signInUsername')
+					+label-info("Password:")
+					br
+					input#passWordInput.form-control(type="password" name="password" ng-model='signInPassword')
+					#btnSignInSubmit.keyButton
+						button.btn.btn-primary(type="submit" ng-click='signInClicked()')
+							span Sign In
+					#signInLinkWrapper
+						a#signInLink(href="/signUp")
+							span Not a member? Sign Up
