--- a/views/signIn.jade
+++ b/views/signIn.jade
@@ -32,3 +32,4 @@ append body
 					#signInLinkWrapper
 						a#signInLink(href="/signUp")
 							span Not a member? Sign Up
+				div(class="g-signin2"  data-onsuccess="onSignIn")
