--- a/views/layout.jade
+++ b/views/layout.jade
@@ -52,6 +52,10 @@ html(lang="en" ng-app='myApp')
                 meta(name="viewport",content="width=device-width, initial-scale=1")
                 meta(name="description",content="")
                 meta(name="author",content="")
+                meta(name="google-signin-client_id",content="14072704931-t3airv9cjge19gns43tj0saa72kp89f0.apps.googleusercontent.com")
+
+
+                14072704931-t3airv9cjge19gns43tj0saa72kp89f0.apps.googleusercontent.com
                 //link(rel="icon",href="../../favicon.ico")
                 block styles
                         link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
@@ -66,6 +70,7 @@ html(lang="en" ng-app='myApp')
                         script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
                         script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
                         script(src='//cdn.tinymce.com/4/tinymce.min.js')
+                        script(src='//apis.google.com/js/platform.js' async defer)
                         script(src='javascripts/ng-tags-input.min.js')
                         script(src='javascripts/jquery.canvasjs.min.js')
                         script(src='javascripts/angular-file-upload.min.js')
@@ -74,6 +79,7 @@ html(lang="en" ng-app='myApp')
                         script(src='javascripts/angular.audio.js')
                         script(src='javascripts/app.js')
                         script(src='javascripts/services.js')
+                        script(src='javascripts/factories.js')
                         script(src='javascripts/controllers.js')
                         script(src='javascripts/commentsController.js')
                         script(src='javascripts/profileController.js')
