--- a/views/signUp.jade
+++ b/views/signUp.jade
@@ -4,7 +4,7 @@
 extends layout
 append body
 	.bgImage
-	.pageController(ng-controller="signUpController" style="margin:0 auto;width:90%;max-width:966px;")
+	.pageController(ng-controller="signUpController as signUp" style="margin:0 auto;width:90%;max-width:966px;")
 		.aleartTop
 			+alert-i-warning("Signing up with Music Production Helper allows you to view your profile page.  With a profile on mphelper.io you can: contribute to the Tip Library, save tips, comment on tips, network yourself with other producers, link your SoundCloud, and gain a good rep for helping others!")
 		
@@ -21,21 +21,23 @@ append body
 
 					+label-info("Username:")
 					br
-					input#usernameInput.form-control(name="username" ng-model="signUpUsername" ng-required)
+					input#usernameInput.form-control(name="username" ng-model="signUp.signUpUsername" ng-required)
 					//+label-info("Email:")
 					//br
 					//input#emailInput.form-control(name="email" ng-model="signUpEmail")
 					+label-info("Password:")
 					br
-					input#passWordInput.form-control(type="password" name="password" ng-model="signUpPassword" ng-required)
+					input#passWordInput.form-control(type="password" name="password" ng-model="signUp.signUpPassword" ng-required)
 					+label-info("Password Confirm:")
-					input#signUpConfirmInput.form-control(type="password" ng-model="signUpPasswordConfirm" ng-required)
-					#btnSignInSubmit.keyButton(ng-click="signUpSubmitClicked()" )
-						button.btn.btn-primary(type="submit" ng-disabled='!signUpGood()' ng-click='signUpClicked()')
+					input#signUpConfirmInput.form-control(type="password" ng-model="signUp.signUpPasswordConfirm" ng-required)
+					#btnSignInSubmit.keyButton(ng-click="signUp.signUpSubmitClicked()" )
+						button.btn.btn-primary(type="submit" ng-disabled='!signUp.signUpGood()' ng-click='signUp.signUpClicked()')
 							span Sign Up
 					#signInLinkWrapper
-						a#signInLink(ng-click='gotoSignInClicked()')
+						a#signInLink(ng-click='signUp.gotoSignInClicked()')
 							span Already a member? Sign In	
 					#signUpError.small(style='color:red')
 						{{signUpErrorMessage}}
+				div(class="g-signin2"  data-onsuccess="onSignIn")
+				//a(href="/googleSignUp") sign up with google
 			.signUpRightMargin.col-lg-4.col-md-4.col-sm-4.col-xs-0
